# Chess-RS

./: .gitignore  Cargo.toml  README.md  TODO.txt
src/: controller.rs  draw.rs  icons.rs  lib.rs  main.rs  puzzles.rs  test.rs  tests.rs
src/model/: board.rs  defs.rs  engine.rs  fen.rs  gamemodes.rs  helper.rs  make_move.rs  mod.rs  movegen.rs  moves.rs  pieces.rs  structs.rs  types.rs  unmake_move.rs  validation.rs
src/model/engine/: constants.rs  eval.rs  minimax.rs  mod.rs  qmovegen.rs  quiesce.rs
src/model/structs/: mod.rs
src/util/: mod.rs  moves.rs  piece.rs
