[package]
name = "chess_rs"
version = "0.1.0"
edition = "2021"

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.test]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false